test/Fail/Issue4637.err
Issue4637.agda:13.1-16.41: error: [TerminationIssue]
Termination checking failed for the following functions:
  test
Problematic calls:
  test r | bar r
  Issue4637.with-16 r (record { foo = x }) | bar x
  test x
    (at Issue4637.agda:16.35-39)
